--- a/VVVF-Yaml-Generator/Pages/Control_Settings/Level-3/Level_3_Page_Control_Common_Sync.xaml
+++ b/VVVF-Yaml-Generator/Pages/Control_Settings/Level-3/Level_3_Page_Control_Common_Sync.xaml
@@ -1,15 +1,15 @@
-﻿<Page x:Class="VVVF_Yaml_Generator.Pages.Control_Settings.Page_Control_Common_Sync"
+﻿<Page x:Class="VVVF_Yaml_Generator.Pages.Control_Settings.Level_3.Level_3_Page_Control_Common_Sync"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:VVVF_Yaml_Generator.Pages.Control_Settings"
+      xmlns:local="clr-namespace:VVVF_Yaml_Generator.Pages.Control_Settings.Level_3"
       mc:Ignorable="d" 
       d:DesignHeight="1250" d:DesignWidth="678"
-      Title="Page_Control_Common_Sync">
+      Title="Level_3_Page_Control_Common_Sync">
 
     <Grid>
-        <ScrollViewer x:Name="scrollViewer">
+        <ScrollViewer x:Name="scrollViewer" Margin="0,0,0,-0">
             <StackPanel>
                 <Frame x:Name="Control_Basic" Height="200" NavigationUIVisibility="Hidden"/>
                 <Frame x:Name="Control_When_FreeRun" Height="150" NavigationUIVisibility="Hidden"/>
