--- a/VVVF-Yaml-Generator/Pages/Control_Settings/Async/Carrier/Control_Async_Carrier_Table.xaml
+++ b/VVVF-Yaml-Generator/Pages/Control_Settings/Async/Carrier/Control_Async_Carrier_Table.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="VVVF_Yaml_Generator.Pages.Control_Settings.Async.Control_Async_Table"
+﻿<UserControl x:Class="VVVF_Yaml_Generator.Pages.Control_Settings.Async.Control_Async_Carrier_Table"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
