--- a/VVVF-Yaml-Generator/Pages/Control_Settings/Async/Control_Async.xaml
+++ b/VVVF-Yaml-Generator/Pages/Control_Settings/Async/Control_Async.xaml
@@ -5,12 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:VVVF_Yaml_Generator.Pages.Control_Settings"
              mc:Ignorable="d" 
-             d:DesignHeight="500" d:DesignWidth="661">
+             d:DesignHeight="700" d:DesignWidth="661">
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="50"/>
+                <RowDefinition Height="200"/>
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="350"/>
             </Grid.RowDefinitions>
@@ -24,16 +25,30 @@
                         <ColumnDefinition Width="573*"/>
                     </Grid.ColumnDefinitions>
                     <Grid Background="#FFA5A5A5">
-                        <Label Content="Random" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center" FontFamily="M PLUS 2 Medium" FontWeight="Bold" Foreground="White" FontSize="14"/>
+                        <Label Content="Random Type" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center" FontFamily="M PLUS 2 Medium" FontWeight="Bold" Foreground="White" FontSize="14"/>
                     </Grid>
                     <Grid Grid.Column="1" Background="White" HorizontalAlignment="Stretch">
-                        <TextBox x:Name="random_box" HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="10" VerticalAlignment="Center" Height="30" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="M PLUS 2 Medium" FontWeight="Bold" FontSize="16" TextChanged="random_box_TextChanged" Margin="10,0,10,0"/>
-
+                        <ComboBox x:Name="random_type_selector" FontSize="16" FontFamily="M PLUS 2" FontWeight="Bold"  Margin="10,10,10,10" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" SelectionChanged="ComboBox_Changed" Tag="Random" />
                     </Grid>
                 </Grid>
 
             </Grid>
             <Grid Grid.Row="2">
+                <Grid VerticalAlignment="Stretch">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="103*"/>
+                        <ColumnDefinition Width="573*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid Background="#FFA5A5A5" VerticalAlignment="Stretch">
+                        <Label Content="Random" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center" FontFamily="M PLUS 2 Medium" FontWeight="Bold" Foreground="White" FontSize="14"/>
+                    </Grid>
+                    <Grid Grid.Column="1" Background="White" HorizontalAlignment="Stretch">
+                        <Frame x:Name="random_setting" />
+                    </Grid>
+                </Grid>
+
+            </Grid>
+            <Grid Grid.Row="3">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="103*"/>
@@ -43,13 +58,13 @@
                         <Label Content="Param Type" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center" FontFamily="M PLUS 2 Medium" FontWeight="Bold" Foreground="White" FontSize="14"/>
                     </Grid>
                     <Grid Grid.Column="1" Background="White" HorizontalAlignment="Stretch">
-                        <ComboBox x:Name="carrier_freq_mode" FontSize="16" FontFamily="M PLUS 2" FontWeight="Bold"  Margin="10,10,10,10" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" SelectionChanged="carrier_freq_mode_SelectionChanged" />
+                        <ComboBox x:Name="carrier_freq_mode" FontSize="16" FontFamily="M PLUS 2" FontWeight="Bold"  Margin="10,10,10,10" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" SelectionChanged="ComboBox_Changed" Tag="Param" />
 
                     </Grid>
                 </Grid>
 
             </Grid>
-            <Grid Grid.Row="3">
+            <Grid Grid.Row="4">
                 <Grid VerticalAlignment="Stretch">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="103*"/>
