--- a/VVVF-Yaml-Generator/Pages/Control_Settings/Level-3/Level_3_Page_Control_Common_Async.xaml
+++ b/VVVF-Yaml-Generator/Pages/Control_Settings/Level-3/Level_3_Page_Control_Common_Async.xaml
@@ -5,19 +5,19 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:VVVF_Yaml_Generator.Pages.Control_Settings.Level_3"
       mc:Ignorable="d" 
-      d:DesignHeight="2250" d:DesignWidth="678"
+      d:DesignHeight="2450" d:DesignWidth="678"
       Title="Level_3_Page_Control_Common_Async">
 
     <Grid>
         <ScrollViewer x:Name="scrollViewer">
             <StackPanel>
-                <Frame x:Name="Control_Basic" Height="200" NavigationUIVisibility="Hidden"/>
-                <Frame x:Name="Control_When_FreeRun" Height="150" NavigationUIVisibility="Hidden"/>
-                <Frame x:Name="Control_Amplitude_Default" Height="300" NavigationUIVisibility="Hidden"/>
-                <Frame x:Name="Control_Amplitude_FreeRun_On" Height="300" NavigationUIVisibility="Hidden"/>
-                <Frame x:Name="Control_Amplitude_FreeRun_Off" Height="300" NavigationUIVisibility="Hidden"/>
-                <Frame x:Name="Control_Dipolar" Height="500" NavigationUIVisibility="Hidden"/>
-                <Frame x:Name="Control_Async" Height="500" NavigationUIVisibility="Hidden"/>
+                <Frame x:Name="Control_Basic" Height="200" NavigationUIVisibility="Hidden" VerticalAlignment="Center"/>
+                <Frame x:Name="Control_When_FreeRun" Height="150" NavigationUIVisibility="Hidden" VerticalAlignment="Center"/>
+                <Frame x:Name="Control_Amplitude_Default" Height="300" NavigationUIVisibility="Hidden" VerticalAlignment="Center"/>
+                <Frame x:Name="Control_Amplitude_FreeRun_On" Height="300" NavigationUIVisibility="Hidden" VerticalAlignment="Center"/>
+                <Frame x:Name="Control_Amplitude_FreeRun_Off" Height="300" NavigationUIVisibility="Hidden" VerticalAlignment="Center"/>
+                <Frame x:Name="Control_Dipolar" Height="500" NavigationUIVisibility="Hidden" VerticalAlignment="Center"/>
+                <Frame x:Name="Control_Async" Height="700" NavigationUIVisibility="Hidden" VerticalAlignment="Center"/>
                 
             </StackPanel>
         </ScrollViewer>
