--- a/VVVF-Yaml-Generator/Pages/Control_Settings/Level-3/Level_3_Page_Control_Common_Sync.xaml
+++ b/VVVF-Yaml-Generator/Pages/Control_Settings/Level-3/Level_3_Page_Control_Common_Sync.xaml
@@ -11,11 +11,11 @@
     <Grid>
         <ScrollViewer x:Name="scrollViewer" Margin="0,0,0,-0">
             <StackPanel>
-                <Frame x:Name="Control_Basic" Height="200" NavigationUIVisibility="Hidden"/>
-                <Frame x:Name="Control_When_FreeRun" Height="150" NavigationUIVisibility="Hidden"/>
-                <Frame x:Name="Control_Amplitude_Default" Height="300" NavigationUIVisibility="Hidden"/>
-                <Frame x:Name="Control_Amplitude_FreeRun_On" Height="300" NavigationUIVisibility="Hidden"/>
-                <Frame x:Name="Control_Amplitude_FreeRun_Off" Height="300" NavigationUIVisibility="Hidden"/>
+                <Frame x:Name="Control_Basic" Height="200" NavigationUIVisibility="Hidden" VerticalAlignment="Center"/>
+                <Frame x:Name="Control_When_FreeRun" Height="150" NavigationUIVisibility="Hidden" VerticalAlignment="Center"/>
+                <Frame x:Name="Control_Amplitude_Default" Height="300" NavigationUIVisibility="Hidden" VerticalAlignment="Center"/>
+                <Frame x:Name="Control_Amplitude_FreeRun_On" Height="300" NavigationUIVisibility="Hidden" VerticalAlignment="Center"/>
+                <Frame x:Name="Control_Amplitude_FreeRun_Off" Height="300" NavigationUIVisibility="Hidden" VerticalAlignment="Center"/>
             </StackPanel>
         </ScrollViewer>
 
